--- a/style/index.css
+++ b/style/index.css
@@ -1,3 +1,6 @@
+<link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Julius+Sans+One&display=swap" rel="stylesheet">
+
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -46,3 +49,37 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+/*General Styles*/
+
+html {
+    font-size:62.5%;
+}
+
+body {
+    line-height: 1.5;
+    font-size: 1.5rem;
+    font-family: 'Questrial', sans-serif;
+}
+
+/*Header*/
+
+h1, h2, h3, h4, h5 {
+    font-family: 'Julius Sans One', sans-serif;
+}
+
+/*Intro*/
+
+#intro {
+    height:90vh;
+    background-color:white;
+    background-image:url("https://images.unsplash.com/photo-1468070454955-c5b6932bd08d?ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80");
+    background-repeat:no-repeat;
+    background-size:cover;
+    background-position:center;
+    background-attachment:fixed;
+}
+
+/*Projects*/
+
+/*Footer*/
