--- a/style/index.css
+++ b/style/index.css
@@ -1,6 +1,3 @@
-<link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Julius+Sans+One&display=swap" rel="stylesheet">
-
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -52,6 +49,10 @@ table {
 
 /*General Styles*/
 
+* {
+    border: 2px solid red !important;
+}
+
 html {
     font-size:62.5%;
 }
@@ -66,6 +67,31 @@ body {
 
 h1, h2, h3, h4, h5 {
     font-family: 'Julius Sans One', sans-serif;
+}
+
+#header {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+}
+
+h2 {
+    width: 70%;
+    font-size: 5rem;
+    padding: 0 1%;
+}
+
+#nav {
+    width: 30%;
+    display: flex;
+    font-size: 2rem;
+    justify-content: space-around;
+    align-items: center;
+}
+
+#nav a {
+    text-decoration: none;
+    color: black;
 }
 
 /*Intro*/
