--- a/style/index.css
+++ b/style/index.css
@@ -97,15 +97,33 @@ h2 {
 /*Intro*/
 
 #intro {
-    height:90vh;
+    height:70vh;
     background-color:white;
     background-image:url("https://images.unsplash.com/photo-1468070454955-c5b6932bd08d?ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80");
     background-repeat:no-repeat;
     background-size:cover;
     background-position:center;
     background-attachment:fixed;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
 }
 
+h1 {
+    color: white;
+    font-size: 10rem;
+}
+
+.projects-button {
+    color: black;
+    background-color: white;
+}
+
+
+
 /*Projects*/
+
+/*flex-wrap: wrap;*/
 
 /*Footer*/
