--- a/style/index.css
+++ b/style/index.css
@@ -108,6 +108,7 @@ h2 {
     text-align: center;
     justify-content: center;
     align-items: center;
+    margin: 2% 7%;
 }
 
 h1 {
@@ -120,9 +121,20 @@ h1 {
     background-color: white;
 }
 
-
-
 /*Projects*/
+
+#projects {
+    margin: 0 .5% 5% .5%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    text-align: center;
+}
+
+.project-1, .project-2, .project-3, .project-4, .project-5, .project-6 {
+    margin: 0 0 2% 0;
+}
 
 /*flex-wrap: wrap;*/
 
