--- a/style/index.css
+++ b/style/index.css
@@ -130,12 +130,13 @@ h1 {
     font-size: 10rem;
 }
 
-button {
+.projects-button, .contact-button {
     background-color: #363062;
     color: white;
     padding: 1%;
     border-radius: 10px;
-    font-size: 20px;
+    font-size: 12px;
+    margin: 0 0 1% 0;
 }
 
 .projects-button:hover {
@@ -191,7 +192,8 @@ i {
 }
 
 i:hover {
-    color: #4d4c7d;
+    color: white;
+    cursor: pointer;
 }
 
 .contact {
@@ -200,13 +202,16 @@ i:hover {
     margin: .5% 0 1% 0;
 }
 
-#footer button {
+.contact-button {
     font-size: 12px;
     margin: 0 0 1% 0;
 }
 
-#footer button:hover {
-    background-color: #4d4c7d;
+.contact-button:hover {
+    background-color: white;
+    color: #363062;
+    font-weight: bold;
+    cursor: pointer;
 }
 
 .social-icons {
