--- a/style/index.css
+++ b/style/index.css
@@ -140,8 +140,9 @@ h3 {
     color: white;
     padding: 1%;
     border-radius: 10px;
-    font-size: 12px;
+    font-size: 2.5rem;
     margin: 0 0 1% 0;
+    text-decoration: none;
 }
 
 .projects-button:hover {
@@ -164,7 +165,7 @@ h3 {
 }
 
 #projects {
-    margin: 0 .5% 5% .5%;
+    margin: 0 1% 1% 1%;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
@@ -173,7 +174,10 @@ h3 {
 }
 
 .project {
+    display: flex;
+    flex-direction: column;
     margin: 0 0 2% 0;
+
 }
 
 .project-title:hover {
@@ -190,6 +194,7 @@ h3 {
     color: white;
     padding: 5%;
     border-radius: 10px;
+    text-decoration: none;
 }
 
 img {
@@ -222,6 +227,7 @@ i:hover {
 .contact-button {
     font-size: 12px;
     margin: 0 0 1% 0;
+    text-decoration: none;
 }
 
 .contact-button:hover {
