Add media tags to CSS for 800px and 500px

--- a/style/index.css
+++ b/style/index.css
@@ -240,3 +240,31 @@ i:hover {
     font-weight: bold;
     cursor: pointer;
 }
+
+/*Media Tags*/
+
+@media(max-width: 800px) {
+/*Header*/
+
+/*Intro*/
+
+/*Projects*/
+
+/*Footer*/
+
+}
+
+
+@media(max-width: 500px) {
+/*Header*/
+
+/*Intro*/
+
+/*Projects*/
+
+/*Footer*/
+    
+}
+
+
+
