Further adjust responsiveness for 800px screen size

--- a/style/index.css
+++ b/style/index.css
@@ -247,12 +247,44 @@ i:hover {
 
 @media(max-width: 800px) {
 /*Header*/ 
-    #nav {
-        width: 75%;
+    #header {
+        display: flex;
+        flex-wrap: wrap;
+        height:50vh;
     }
-/*Projects*/
-    #projects {
-        justify-content: space-evenly;
+    .header-name {
+        width: 100%;
+        justify-content: center;
+    }
+    h2 {
+        font-size: 5rem;
+        margin: 0; 
+    }
+    #nav {
+        font-display: flex;
+        flex-direction: column;
+        width: 100%;
+        font-size: 1.5rem;
+        margin: 0 0 2% 0;
+    }
+    #nav a {
+        border-color: white;
+    }
+    /*Intro*/
+    .intro-text h1 {
+        font-size: 7rem;
+    }
+    .intro-text a {
+        font-size: 1.8rem;
+    }
+    /*Projects*/
+    .project {
+        display-content: center;
+        padding: 2%;
+    }
+    .project-image img {
+        height: 350px;
+        width: 350px;
     }
 }
 
