--- a/style/index.css
+++ b/style/index.css
@@ -327,5 +327,48 @@ i:hover {
     }
 }
 
+@media(max-width: 1024px) {
+    /*Header*/ 
+        #header {
+            display: flex;
+            flex-wrap: wrap;
+            height: 30vh;
+        }
+        .header-name {
+            width: 100%;
+            justify-content: center;
+        }
+        h2 {
+            font-size: 6rem;
+            margin: 0; 
+        }
+        #nav {
+            font-display: flex;
+            flex-direction: column;
+            width: 100%;
+            font-size: 1.8rem;
+            margin: 0 0 2% 0;
+        }
+        #nav a {
+            border-color: white;
+        }
+        /*Intro*/
+        .intro-text h1 {
+            font-size: 9rem;
+        }
+        .intro-text a {
+            font-size: 3rem;
+        }
+        /*Projects*/
+        .project {
+            display-content: center;
+            padding: 2%;
+        }
+        .project-image img {
+            height: 450px;
+            width: 450px;
+        }
+    }
+
 
 
