--- a/style/index.css
+++ b/style/index.css
@@ -173,6 +173,7 @@ h3 {
     align-items: center;
     justify-content: space-between;
     text-align: center;
+    padding: 3.5%;
 }
 
 .project {
@@ -209,19 +210,19 @@ img {
     background-color: #d8b9c3;
 }
 
-i {
+.social-icons {
+    text-align: center;
+    padding: 1% 0 0 0;
+}
+
+.social-icons i {
     font-size: 3rem;
     color: #363062;
 }
 
-i:hover {
+.social-icons i:hover {
     color: white;
     cursor: pointer;
-}
-
-.social-icons {
-    text-align: center;
-    padding: 1% 0 0 0;
 }
 
 .contact {
@@ -327,8 +328,8 @@ i:hover {
     }
 }
 
-@media(max-width: 1024px) {
-    /*Header*/ 
+@media(max-width: 360px) {
+    /*Header*/
         #header {
             display: flex;
             flex-wrap: wrap;
@@ -339,36 +340,46 @@ i:hover {
             justify-content: center;
         }
         h2 {
-            font-size: 6rem;
+            font-size: 2.5rem;
             margin: 0; 
         }
         #nav {
             font-display: flex;
             flex-direction: column;
             width: 100%;
-            font-size: 1.8rem;
+            font-size: 1rem;
             margin: 0 0 2% 0;
         }
         #nav a {
             border-color: white;
         }
-        /*Intro*/
+    /*Intro*/
+        #intro {
+            height: 30vh;
+        }
         .intro-text h1 {
-            font-size: 9rem;
+            font-size: 4rem;
         }
         .intro-text a {
-            font-size: 3rem;
+            font-size: 1 rem;
         }
-        /*Projects*/
-        .project {
-            display-content: center;
-            padding: 2%;
-        }
+    /*Projects*/
         .project-image img {
-            height: 450px;
-            width: 450px;
+            height: 140px;
+            width: 140px;
         }
+        .project .project-title {
+            font-size: 1rem;
+        }
+    /*Footer*/
+        .social-icons i {
+            font-size: 2rem;
+        } 
+        .contact-button {
+            font-size: 1rem;
+            text-align: center;
     }
 
+    
 
 
